testdata/baselines/reference/submodule/conformance/jsdocTemplateTag7.errors.txt
a.js(13,12): error TS2304: Cannot find name 'T'.
a.js(14,14): error TS2304: Cannot find name 'T'.


==== a.js (2 errors) ====
    /**
     * @template const T
     * @typedef {[T]} X
     */
    
    /**
     * @template const T
     */
    class C { }
    
    /**
     * @template private T
     * @param {T} x
               ~
!!! error TS2304: Cannot find name 'T'.
     * @returns {T}
                 ~
!!! error TS2304: Cannot find name 'T'.
     */
    function f(x) {
        return x;
    }
    